# Quiz_App

./: .gitignore  README.md  pyproject.toml
backend/apps/quiz/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/quiz/migrations/: 0001_initial.py  0002_alter_choice_table_alter_question_table_and_more.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: urls.py
fastapi/: auth.py  database.py  dependencies.py  main.py  models.py  schemas.py
fastapi/routers/: quiz.py
